# Lumora

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  PROTOCOL.md  README.md  SECURITY.md  THREAT_MODEL.md  VERSIONING.md  deny.toml  docker-compose.yml  openapi.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: README.md
crates/lumora-bitvm/: Cargo.toml
crates/lumora-bitvm/src/: bridge.rs  challenger.rs  config.rs  keys.rs  lib.rs  operator.rs  protocol.rs  script.rs  trace.rs  transactions.rs  verifier.rs
crates/lumora-bitvm/src/adapters/: ark.rs  babylon.rs  bevm.rs  bison.rs  bitlayer.rs  bob.rs  citrea.rs  emv.rs  lightning.rs  liquid.rs  merlin.rs  mod.rs  rgb.rs  rooch.rs  stacks.rs
crates/lumora-bitvm/tests/: protocol_integration.rs  regtest_simulation.rs
crates/lumora-circuits/: Cargo.toml
crates/lumora-circuits/src/: aggregation.rs  lib.rs  recursive.rs  transfer.rs  variable_io.rs  wealth_proof.rs  withdraw.rs
crates/lumora-circuits/src/gadgets/: mod.rs  poseidon_chip.rs  range_check.rs
crates/lumora-cli/: Cargo.toml
crates/lumora-cli/src/: main.rs
crates/lumora-client/: Cargo.toml
crates/lumora-client/src/: lib.rs  wallet.rs  wallet_manager.rs
crates/lumora-contracts/: Cargo.toml
crates/lumora-contracts/benches/: contract_bench.rs
crates/lumora-contracts/src/: bridge.rs  compliance.rs  deposit.rs  epoch.rs  error.rs  events.rs  fee.rs  governance.rs  incentive.rs  lib.rs  migration.rs  rollup.rs  snapshot.rs  state.rs  transfer.rs  wal.rs  withdraw.rs
crates/lumora-contracts/tests/: cross_crate.rs  integration.rs
crates/lumora-node/: Cargo.toml
crates/lumora-node/src/: batch_accumulator.rs  daemon.rs  lib.rs  mempool.rs  note_store.rs  peers.rs  sync.rs
crates/lumora-note/: Cargo.toml
crates/lumora-note/benches/: encryption_bench.rs
crates/lumora-note/src/: commitment.rs  encryption.rs  keys.rs  lib.rs  note.rs  nullifier.rs
crates/lumora-primitives/: Cargo.toml
crates/lumora-primitives/src/: envelope.rs  lib.rs  pedersen.rs  poseidon.rs  serde_field.rs
crates/lumora-prover/: Cargo.toml
crates/lumora-prover/benches/: proof_bench.rs
crates/lumora-prover/src/: async_prove.rs  lib.rs  pipeline.rs
crates/lumora-rpc/: Cargo.toml
crates/lumora-rpc/src/: handlers.rs  jitter.rs  lib.rs  main.rs  mempool_handlers.rs  rpc_tests.rs  server.rs  sync_handlers.rs  tasks.rs  types.rs
crates/lumora-rpc/tests/: e2e.rs
crates/lumora-sdk/: Cargo.toml
crates/lumora-sdk/examples/: e2e.rs
crates/lumora-sdk/src/: convert.rs  lib.rs  lumora.rs
crates/lumora-tree/: Cargo.toml
crates/lumora-tree/benches/: tree_bench.rs
crates/lumora-tree/src/: lib.rs
crates/lumora-verifier/: Cargo.toml
crates/lumora-verifier/benches/: verifier_bench.rs
crates/lumora-verifier/src/: lib.rs  versioned.rs
deploy/helm/lumora/: Chart.yaml  values.yaml
deploy/helm/lumora/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: api-guide.md  architecture.md  circuit-constraints.md  cross-chain-privacy.md  cryptography.md  emv-bridge.md  getting-started.md  light-client-design.md  monitoring-and-dr.md  state-persistence.md  stealth-addresses.md  troubleshooting.md  typescript-sdk.md  upgrade-runbook.md
docs/adr/: 001-halo2-ipa-proving-system.md  002-pallas-curve-and-poseidon-hash.md  003-two-input-two-output-circuits.md  004-merkle-tree-depth-32.md  005-axum-rpc-server.md  006-json-state-with-hmac-integrity.md  README.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_bitvm_protocol/: seed1
fuzz/corpus/fuzz_bitvm_trace_step/: seed1
fuzz/fuzz_targets/: bitvm_adapter_parse.rs  bitvm_merkle.rs  bitvm_protocol.rs  bitvm_trace_step.rs  emv_deposit_parse.rs  envelope.rs  field_parse.rs  pedersen_commit.rs  poseidon_merkle.rs  transfer_json.rs  wal_entry.rs
hooks/: pre-commit
sdks/python/: README.md  pyproject.toml
sdks/python/lumora/: __init__.py  client.py
sdks/python/tests/: test_client.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: index.ts  lumora.test.ts  lumora.ts
secrets/: README.md
