[package]
name = "lumora-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lumora-primitives = { path = "../crates/lumora-primitives" }
lumora-bitvm = { path = "../crates/lumora-bitvm" }
pasta_curves = "0.5"
ff = "0.13"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"

# Fuzz targets
[[bin]]
name = "fuzz_envelope_seal_open"
path = "fuzz_targets/envelope.rs"
doc = false

[[bin]]
name = "fuzz_field_hex_parse"
path = "fuzz_targets/field_parse.rs"
doc = false

[[bin]]
name = "fuzz_transfer_json"
path = "fuzz_targets/transfer_json.rs"
doc = false

[[bin]]
name = "fuzz_wal_entry"
path = "fuzz_targets/wal_entry.rs"
doc = false

[[bin]]
name = "fuzz_pedersen_commit"
path = "fuzz_targets/pedersen_commit.rs"
doc = false

[[bin]]
name = "fuzz_poseidon_merkle"
path = "fuzz_targets/poseidon_merkle.rs"
doc = false

[[bin]]
name = "fuzz_bitvm_trace_step"
path = "fuzz_targets/bitvm_trace_step.rs"
doc = false

[[bin]]
name = "fuzz_bitvm_merkle"
path = "fuzz_targets/bitvm_merkle.rs"
doc = false

[[bin]]
name = "fuzz_bitvm_protocol"
path = "fuzz_targets/bitvm_protocol.rs"
doc = false

[[bin]]
name = "fuzz_bitvm_adapter_parse"
path = "fuzz_targets/bitvm_adapter_parse.rs"
doc = false
