[package]
name = "lumora-circuits"
description = "Halo2 ZK circuits for LUMORA: private transfers, minting, and lending"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lumora-primitives = { workspace = true }
lumora-note = { workspace = true }
lumora-tree = { workspace = true }
halo2_proofs = { workspace = true }
halo2_gadgets = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
blake2b_simd = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
