[package]
name = "lumora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the Lumora privacy coprocessor"

[[bin]]
name = "lumora"
path = "src/main.rs"

[dependencies]
lumora-sdk = { workspace = true }
lumora-note = { workspace = true }
lumora-client = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rpassword = { workspace = true }
