[package]
name = "lumora-node"
description = "Prover daemon, note relay, and batch accumulator for Lumora"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lumora-primitives = { workspace = true }
lumora-note = { workspace = true }
lumora-tree = { workspace = true }
lumora-circuits = { workspace = true }
lumora-prover = { workspace = true }
lumora-verifier = { workspace = true }
lumora-contracts = { workspace = true }
lumora-bitvm = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = "1"
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
