[package]
name = "lumora-primitives"
description = "Core cryptographic primitives for LUMORA: Poseidon hash, Pedersen commitments, Pallas curve operations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
halo2_proofs = { workspace = true }
halo2_gadgets = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
proptest = { workspace = true }
