[package]
name = "lumora-prover"
description = "Proof generation engine for LUMORA private transfers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lumora-primitives = { workspace = true }
lumora-note = { workspace = true }
lumora-tree = { workspace = true }
lumora-circuits = { workspace = true }
halo2_proofs = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "proof_bench"
harness = false
