[package]
name = "lumora-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP JSON-RPC server for the Lumora privacy coprocessor"

[dependencies]
lumora-sdk = { workspace = true }
lumora-node = { workspace = true }
lumora-contracts = { workspace = true }
lumora-bitvm = { workspace = true }
lumora-circuits = { workspace = true }
lumora-primitives = { workspace = true }
lumora-verifier = { workspace = true }
lumora-note = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
subtle = "2"
zeroize = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
