[package]
name = "lumora-verifier"
description = "Proof verification for LUMORA private transfers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lumora-primitives = { workspace = true }
lumora-circuits = { workspace = true }
lumora-prover = { workspace = true }
halo2_proofs = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }

[dev-dependencies]
lumora-note = { workspace = true }
lumora-tree = { workspace = true }
lumora-prover = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "verifier_bench"
harness = false
