[project]
name = "lumora-sdk"
version = "0.1.0"
description = "Python client SDK for the Lumora privacy coprocessor RPC API"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
keywords = ["lumora", "privacy", "zk", "halo2", "bitcoin", "rollup"]

[project.urls]
Repository = "https://github.com/lumora/lumora"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
